// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calulateNextGameState() Should return the next game state 1`] = `
Array [
  Array [
    Object {
      "movableEntity": null,
      "staticEntity": Object {
        "entityId": "FLOOR",
        "id": 1,
      },
    },
  ],
  Array [
    Object {
      "movableEntity": Object {
        "entityId": "BLOCK",
        "id": 3,
      },
      "staticEntity": Object {
        "entityId": "FLOOR",
        "id": 2,
      },
    },
  ],
  Array [
    Object {
      "movableEntity": null,
      "staticEntity": Object {
        "entityId": "FLOOR",
        "id": 4,
      },
    },
  ],
]
`;

exports[`calulateNextGameState() Should return the next game state 2`] = `
Array [
  Array [
    Object {
      "movableEntity": Object {
        "entityId": "BLOCK",
        "id": 3,
      },
      "staticEntity": Object {
        "entityId": "FLOOR",
        "id": 1,
      },
    },
  ],
  Array [
    Object {
      "movableEntity": null,
      "staticEntity": Object {
        "entityId": "FLOOR",
        "id": 2,
      },
    },
  ],
  Array [
    Object {
      "movableEntity": null,
      "staticEntity": Object {
        "entityId": "FLOOR",
        "id": 4,
      },
    },
  ],
]
`;

exports[`changeGravityDirection() Should return an array of all game states from the move 1`] = `
Array [
  Array [
    Array [
      Object {
        "movableEntity": null,
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 1,
        },
      },
    ],
    Array [
      Object {
        "movableEntity": Object {
          "entityId": "BLOCK",
          "id": 3,
        },
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 2,
        },
      },
    ],
    Array [
      Object {
        "movableEntity": null,
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 4,
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "movableEntity": Object {
          "entityId": "BLOCK",
          "id": 3,
        },
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 1,
        },
      },
    ],
    Array [
      Object {
        "movableEntity": null,
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 2,
        },
      },
    ],
    Array [
      Object {
        "movableEntity": null,
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 4,
        },
      },
    ],
  ],
]
`;

exports[`getInitialGameState() Should return the initial game states for the given state 1`] = `
Array [
  Array [
    Array [
      Object {
        "movableEntity": Object {
          "color": "#ff0000",
          "entityId": "BLOCK",
          "fading": true,
          "id": 1,
        },
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 2,
        },
      },
      Object {
        "movableEntity": Object {
          "color": "#ff0000",
          "entityId": "BLOCK",
          "fading": true,
          "id": 3,
        },
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 4,
        },
      },
    ],
  ],
  Array [
    Array [
      Object {
        "movableEntity": null,
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 2,
        },
      },
      Object {
        "movableEntity": null,
        "staticEntity": Object {
          "entityId": "FLOOR",
          "id": 4,
        },
      },
    ],
  ],
]
`;

exports[`makeMoves() Should return an array of game states for the given moves 1`] = `
Array [
  Array [
    Array [
      Array [
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 2,
          },
        },
        Object {
          "movableEntity": Object {
            "color": "#ff0000",
            "entityId": "BLOCK",
            "id": 1,
          },
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 3,
          },
        },
      ],
      Array [
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 4,
          },
        },
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 5,
          },
        },
      ],
    ],
  ],
  Array [
    Array [
      Array [
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 2,
          },
        },
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 3,
          },
        },
      ],
      Array [
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 4,
          },
        },
        Object {
          "movableEntity": Object {
            "color": "#ff0000",
            "entityId": "BLOCK",
            "id": 1,
          },
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 5,
          },
        },
      ],
    ],
  ],
  Array [
    Array [
      Array [
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 2,
          },
        },
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 3,
          },
        },
      ],
      Array [
        Object {
          "movableEntity": Object {
            "color": "#ff0000",
            "entityId": "BLOCK",
            "id": 1,
          },
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 4,
          },
        },
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 5,
          },
        },
      ],
    ],
  ],
  Array [
    Array [
      Array [
        Object {
          "movableEntity": Object {
            "color": "#ff0000",
            "entityId": "BLOCK",
            "id": 1,
          },
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 2,
          },
        },
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 3,
          },
        },
      ],
      Array [
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 4,
          },
        },
        Object {
          "movableEntity": null,
          "staticEntity": Object {
            "entityId": "FLOOR",
            "id": 5,
          },
        },
      ],
    ],
  ],
]
`;
